# ExchangeRatesForWindows

./: CMakeLists.txt  README.md
ExchangeRatesForWindows/: CMakeLists.txt  ExchangeRates.cpp  ExchangeRates.h  headers.h  main.cpp
